# ZUT_Komunikacja

./: README.md
Program_1/: CMakeLists.txt  README.md
Program_1/app/src/: main.c
Program_2/: CMakeLists.txt
Program_2/app/src/: main.c  runner.py
Program_4/: CMakeLists.txt
Program_4/app/src/: main.c
Program_5/app/src/: main.c
Program_6/: README.md
Program_6/app/src/: main.cpp  runner.py
